fixed layout issues with icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,14 @@ label {
   font-size: 18px;
   color: whitesmoke;
 }
+.icon {
+  margin: 0 auto;
+  width: 50vw;
+  text-align: center;
+  line-height: 1em;
+  font-size: 18px;
+  color: whitesmoke;
+}
 @media only screen and (max-width: 930px) {
   .box {
     font-size: 14px;
@@ -136,6 +144,7 @@ label {
   padding: 0;
   outline: none;
   background-color: transparent;
+  border: none;
 }
 #autokey:focus {
   scale: 1;
